@@ -1,3 +1,8 @@
+2005-09-17  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* check/elements/audioconvert.c: (GST_START_TEST):
+	  try out 24 bit conversion
+
 2005-09-15  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* ext/vorbis/vorbisenc.c: (gst_vorbisenc_init),
